--- a/scripts/MAML.ipynb
+++ b/scripts/MAML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,23 +29,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mw/cls_basketball-v2\n",
+      "mw/cls_sweep-v2\n",
       "mw/cls_push-v2\n",
       "mw/cls_door-open-v2\n",
-      "mw/cls_window-open-v2\n",
       "mw/cls_peg-insert-side-v2\n",
+      "mw/cls_drawer-close-v2\n",
+      "mw/cls_basketball-v2\n",
       "mw/cls_reach-v2\n",
-      "mw/cls_sweep-v2\n",
-      "mw/cls_button_press_topdown-v2\n",
+      "mw/cls_window-open-v2\n",
       "mw/cls_pick-place-v2\n",
-      "mw/cls_drawer-close-v2\n"
+      "mw/cls_button_press_topdown-v2\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -209,10 +209,16 @@
     "            task_list=np.array(task_list, dtype=object).reshape(-1,1) # convert row vector to col vector\n",
     "            X.append(task_list)\n",
     "        X_new=[]\n",
+    "        task_counter = []\n",
     "        for task in X:\n",
+    "            counter = 0\n",
     "            for i in range(0,len(task),4):\n",
     "                X_new.append(np.concatenate((task[i][0], task[i+1][0])))\n",
+    "                counter += 1\n",
+    "            task_counter.append(counter)\n",
+    "\n",
     "        X = np.array(X_new, dtype=object)\n",
+    "        task_counts = np.array(task_counter, dtype=object)\n",
     "        y=np.array(y,dtype=object)\n",
     "        y=y.flatten()\n",
     "        #X=X.reshape(-1,1) # convert row vector to col vector\n",
@@ -246,7 +252,7 @@
     "            #     X.append(np.concatenate((obs_action_sigma1, obs_action_sigma2), axis=1))\n",
     "            #     y.append(self.compare_probabilities(sigma1, sigma2))\n",
     "\n",
-    "        return X, y\n",
+    "        return X, y, task_counts\n",
     "\n",
     "    def setup_optimizers(self, optim_class, optim_kwargs):\n",
     "        self.optim = optim_class(self.model.parameters(), **optim_kwargs)\n",
@@ -353,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +372,7 @@
     }
    ],
    "source": [
-    "X, y = model.prepare_data()\n",
+    "X, y, task_lengths = model.prepare_data()\n",
     "print('Data Preparation Done.\\n')\n",
     "\n",
     "# # Train the model\n",
@@ -375,6 +381,144 @@
     "#     loss = model._train_step(X, y)\n",
     "#     print(f\"Epoch {epoch+1}, Loss: {loss}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1# task - > 1200 -> 4 -> 25 (-> 43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def batchify(X, y, task_lengths, task_no, num=110):\n",
+    "\n",
+    "    if task_no == 0:\n",
+    "        task_beg = 0  \n",
+    "        task_end = task_lengths[0]\n",
+    "    else:    \n",
+    "        task_beg = np.sum(task_lengths[0:task_no])    \n",
+    "        task_end = np.sum(task_lengths[0:task_no+1])\n",
+    "\n",
+    "    rand = random.sample(range(0,400), 110)\n",
+    "\n",
+    "    X_task = X[task_beg:task_end]\n",
+    "    y_task = y[task_beg:task_end]\n",
+    "\n",
+    "    X_random = []\n",
+    "    y_random = []\n",
+    "\n",
+    "    for r in rand:\n",
+    "        X_random.append(X_task[r*25 : r*25+25])\n",
+    "        y_random.append(y_task[r*25 : r*25+25])\n",
+    "\n",
+    "    X_random = np.array(X_random, dtype=object)\n",
+    "    y_random = np.array(y_random, dtype=object)\n",
+    "    \n",
+    "    return X_random.reshape(2750,43), y_random.reshape(2750,)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_rand, y_rand = batchify(X, y, task_lengths, task_no=0, num=110)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.04981524869799614, 0.6701956987380981, 0.054587170481681824,\n",
+       "       0.6266589164733887, -0.034611549228429794, 0.6104834675788879,\n",
+       "       -7.039375486783683e-05, 1.0, 2.786039263412918e-17,\n",
+       "       1.2141063640429825e-19, 1.1298222810626138e-31, 0.0, 0.0, 0.0, 0.0,\n",
+       "       0.0, 0.0, 0.0, 0.04837089031934738, 0.6690229773521423,\n",
+       "       0.057140156626701355, 0.677852213382721, -0.034611549228429794,\n",
+       "       0.6104834675788879, -7.204776193248108e-05, 1.0,\n",
+       "       2.95110282377563e-17, 3.8790885564797413e-19,\n",
+       "       1.121512593947216e-31, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0,\n",
+       "       0.0, -0.09444252401590347, -0.027926962822675705,\n",
+       "       -1.1854033470153809, 0.6001943349838257], dtype=object)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_rand[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.047239456325769424"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_rand[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -834,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
