--- a/scripts-2/Run.ipynb
+++ b/scripts-2/Run.ipynb
@@ -132,7 +132,7 @@
     "# reptile_model.train(X, y, task_lengths, 2000)\n",
     "\n",
     "# maml_model = train_MAML.MAML(input_size, hidden_size1, hidden_size2, hidden_size3)\n",
-    "# maml_model.train(X,y,task_lengths,2000)\n",
+    "maml_model.train(X,y,task_lengths,2000)\n",
     "\n",
     "imaml_model = train_iMAML.iMAML(input_size, hidden_size1, hidden_size2, hidden_size3)\n",
     "imaml_model.train(X,y,task_lengths,2000)"
