--- a/scripts/Run.ipynb
+++ b/scripts/Run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,18 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +50,36 @@
     "ml10 = data.get_data()\n",
     "data.construct_episodes(ml10)\n",
     "X, y, task_lengths = data.prepare_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "train() missing 1 required positional argument: 'num_epochs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m hidden_size3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m256\u001b[39m\n\u001b[1;32m      7\u001b[0m maml_model \u001b[38;5;241m=\u001b[39m train_MAML\u001b[38;5;241m.\u001b[39mMAML(input_size, hidden_size1, hidden_size2, hidden_size3)\n\u001b[0;32m----> 8\u001b[0m \u001b[43mmaml_model\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtask_lengths\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m#save the model in the models directory\u001b[39;00m\n\u001b[1;32m     10\u001b[0m torch\u001b[38;5;241m.\u001b[39msave(maml_model\u001b[38;5;241m.\u001b[39mstate_dict(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodels/maml_model.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: train() missing 1 required positional argument: 'num_epochs'"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "input_size = 43\n",
+    "hidden_size1 = 256\n",
+    "hidden_size2 = 256\n",
+    "hidden_size3 = 256\n",
+    "\n",
+    "maml_model = train_MAML.MAML(input_size, hidden_size1, hidden_size2, hidden_size3)\n",
+    "maml_model.train(X, y, task_lengths, 2000)\n",
+    "#save the model in the models directory\n",
+    "torch.save(maml_model.state_dict(), 'models/maml_model.pth')\n"
    ]
   },
   {
@@ -162,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4
  },
