complete results for Reptile

--- a/scripts/Run.ipynb
+++ b/scripts/Run.ipynb
@@ -1090,11 +1090,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving the results"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "rep_train_loss = rep_train_plty\n",
+    "\n",
+    "# training results\n",
+    "np.savetxt('results/reptile/rep_train_pltx.txt', rep_train_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_train_loss.txt', rep_train_loss, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_train_acc.txt', rep_train_acc, delimiter=', ')\n",
+    "\n",
+    "# cls_drawer-open\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_draweropen_pltx.txt', rep_valid_no_prior_draweropen_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_draweropen_plty.txt', rep_valid_no_prior_draweropen_plty, delimiter=', ')\n",
+    "\n",
+    "np.savetxt('results/reptile/rep_valid_prior_draweropen_pltx.txt', rep_valid_prior_draweropen_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_prior_draweropen_plty.txt', rep_valid_prior_draweropen_plty, delimiter=', ')\n",
+    "\n",
+    "# cls_lever-pull\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_leverpull_pltx.txt', rep_valid_no_prior_leverpull_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_leverpull_plty.txt', rep_valid_no_prior_leverpull_plty, delimiter=', ')\n",
+    "\n",
+    "np.savetxt('results/reptile/rep_valid_prior_leverpull_pltx.txt', rep_valid_prior_leverpull_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_prior_leverpull_plty.txt', rep_valid_prior_leverpull_plty, delimiter=', ')\n",
+    "\n",
+    "# cls_shelf-place\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_shelfplace_pltx.txt', rep_valid_no_prior_shelfplace_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_shelfplace_plty.txt', rep_valid_no_prior_shelfplace_plty, delimiter=', ')\n",
+    "\n",
+    "np.savetxt('results/reptile/rep_valid_prior_shelfplace_pltx.txt', rep_valid_prior_shelfplace_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_prior_shelfplace_plty.txt', rep_valid_prior_shelfplace_plty, delimiter=', ')\n",
+    "\n",
+    "# cls_sweep-into\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_sweepinto_pltx.txt', rep_valid_no_prior_sweepinto_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_no_prior_sweepinto_plty.txt', rep_valid_no_prior_sweepinto_plty, delimiter=', ')\n",
+    "\n",
+    "np.savetxt('results/reptile/rep_valid_prior_sweepinto_pltx.txt', rep_valid_prior_sweepinto_pltx, delimiter=', ')\n",
+    "np.savetxt('results/reptile/rep_valid_prior_sweepinto_plty.txt', rep_valid_prior_sweepinto_plty, delimiter=', ')\n"
+   ]
   },
   {
    "cell_type": "code",
