--- a/scripts/MAML-Run.ipynb
+++ b/scripts/MAML-Run.ipynb
@@ -1767,12 +1767,12 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "# maml_train_loss = maml_train_plty\n",
+    "maml_train_loss = maml_train_plty\n",
     "\n",
-    "# # training results\n",
-    "# np.savetxt('results/MAML/maml_train_pltx.txt', maml_train_pltx, delimiter=', ')\n",
-    "# np.savetxt('results/MAML/maml_train_loss.txt', maml_train_loss, delimiter=', ')\n",
-    "# np.savetxt('results/MAML/maml_train_acc.txt', maml_train_acc, delimiter=', ')\n",
+    "# training results\n",
+    "np.savetxt('results/MAML/maml_train_pltx.txt', maml_train_pltx, delimiter=', ')\n",
+    "np.savetxt('results/MAML/maml_train_loss.txt', maml_train_loss, delimiter=', ')\n",
+    "np.savetxt('results/MAML/maml_train_acc.txt', maml_train_acc, delimiter=', ')\n",
     "\n",
     "# cls_drawer-open\n",
     "np.savetxt('results/MAML/maml_valid_no_prior_draweropen_pltx.txt', maml_valid_no_prior_draweropen_pltx, delimiter=', ')\n",
@@ -1837,13 +1837,6 @@
     "# imaml_model = train_iMAML.iMAML(input_size, hidden_size1, hidden_size2, hidden_size3)\n",
     "# imaml_model.train(X,y,task_lengths,2000)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
